--- a/ZacharyHoffman_IceCreamDreams/index.html
+++ b/ZacharyHoffman_IceCreamDreams/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Ice Cream Dreams</title>
+        <title>LOLXD</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
